jobs/integration/templates/validate-gatekeeper-policy.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: test-ns
    labels:
        gatekeeper: "true"
