jobs/integration/templates/test-audit-webhook.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-audit-webhook
spec:
  volumes:
  - name: nginx-config
    configMap:
      name: test-audit-webhook
  containers:
  - name: nginx
    image: rocks.canonical.com:443/cdk/diverdane/nginxdualstack:1.0.0
    ports:
    - containerPort: 80
    volumeMounts:
    - name: nginx-config
      mountPath: /etc/nginx
